<resources>
    <string name="app_name">CaroProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu">Menu</string>
    <string name="friend_list">Friend</string>
    <string name="history">History</string>

    <string name="user_info">My Account</string>
    <string name="pvp">PvP</string>
    <string name="pve">PvE</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="save_password">Save Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_word">Welcome to Caro Plus</string>

    <string name="mode">Play:</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <string name="choose_shape">Shape: </string>
    <string name="choose_color">Color: </string>
    <string name="background">Background</string>
    <string name="music">Music</string>
    <string name="store">Store</string>

    <string name="x5">5x5</string>
    <string name="x8">8x8</string>
    <string name="x11">11x11</string>
    <string name="choose_board_size">Board Size:</string>

    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="retype">Retype Password</string>
    <string name="reset">Reset</string>
    <string name="ok">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="dialog_ask_to_buy_item">Are you sure to buy this item</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="email">Email</string>
    <string name="phone">Phone</string>
</resources>