<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpFragment">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/edtUsernameSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:textSize="32sp"
        android:hint="@string/username"
        android:textAllCaps="false"
        android:background="@drawable/custom_edittext_3"/>
    <EditText
        android:id="@+id/edtPasswordSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:textSize="32sp"
        android:hint="@string/password"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext_3"/>
    <EditText
        android:id="@+id/edtRetypeSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:textSize="32sp"
        android:hint="@string/retype"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext_3"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="20dp">

    <Button
        android:id="@+id/btnResetSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"
        android:textColor="@color/word_color_gray"
        android:textStyle="bold"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:background="@drawable/custom_button_1"/>

    <Button
        android:id="@+id/btnSignUpSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/word_color_gray"
        android:background="@drawable/custom_button_1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>