<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuFragment">
    <FrameLayout
        android:id="@+id/main_view_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"/>
    <FrameLayout
        android:id="@+id/properties_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RadioGroup
            android:id="@+id/groupButton"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <RadioButton
                android:id="@+id/btnMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/main_menu_background_button"
                android:text="@string/menu"/>
            <RadioButton
                android:id="@+id/btnFriendList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/main_menu_background_button"
                android:text="@string/friend_list"/>
            <RadioButton
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/main_menu_background_button"
                android:text="@string/history"/>
        </RadioGroup>
    </FrameLayout>
</LinearLayout>