<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameModeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_picture"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your name"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnPvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/word_color_gray"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:textStyle="bold"
            android:text="@string/pvp"
            android:background="@drawable/custom_button_1"/>
        <Button
            android:id="@+id/btnPvc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/word_color_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:textStyle="bold"
            android:text="@string/pvc"
            android:background="@drawable/custom_button_1"/>
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/word_color_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/setting"
            android:background="@drawable/custom_button_1"/>
        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/word_color_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/exit"
            android:background="@drawable/custom_button_1"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Do Some Thing About Friend, history..." />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>